--- a/private/weather/index.html
+++ b/private/weather/index.html
@@ -11,8 +11,8 @@
     body { margin: 0; }
     img { image-rendering: pixelated; }
     #map {
-      width: 100vw;
-      height: calc(100vh - 75px);
+      width: 100dvw;
+      height: calc(100dvh - 75px);
     }
     .leaflet-container {
       background: #000000;
