--- a/private/weather/index.html
+++ b/private/weather/index.html
@@ -9,7 +9,6 @@
   <title>雨雲レーダーリアルタイム</title>
   <style media="screen">
     body { margin: 0; }
-    img { image-rendering: pixelated; }
     #map {
       width: 100dvw;
       height: calc(100dvh - 75px);
@@ -121,6 +120,10 @@
       "OpenStreetMap": L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
         opacity: 0.5,
         attribution: "&copy; <a href='http://osm.org/copyright'>OpenStreetMap</a> contributors"
+      }),
+      "地理院白地図": L.tileLayer("https://cyberjapandata.gsi.go.jp/xyz/blank/{z}/{x}/{y}.png", {
+        opacity: 0.5,
+        attribution: "<a href='https://maps.gsi.go.jp/development/'>国土地理院"
       })
     }).addTo(Maps);
     Maps.zoomControl.setPosition("bottomright");
