--- a/bm2dx/ffmpeg/convert.html
+++ b/bm2dx/ffmpeg/convert.html
@@ -55,7 +55,7 @@
         cv_progress.textContent = "変換状況：ファイルを選択してください";
         return window.FFmpeg;
       }
-      cv_progress.textContent = "ffmpegを実行できません。ページの再読み込みをお試しください。";
+      cv_progress.textContent = "うー、なんだか調子が悪いなー… 再読み込みしてみてほしいかも…";
       return {};
     };
     const addLog = (type, message) => {
